<resources>
    <string name="app_name">Application_test</string>
    <string name="MainActivity_tv1">加载中。。。</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="neterror">网络连接错误</string>
    <string name="netok">网络环境良好</string>
    <string name="login_User">请输入用户名</string>
    <string name="login_tv1">立即注册</string>
    <string name="login_bt1">登录</string>
    <string name="login_tishi1">账户或密码不能为空</string>
    <string name="froget_tv1">去登陆</string>
    <string name="forget_tv2">在线客服</string>
    <string name="login_tv2">忘记密码</string>
    <string name="login_tv3">在线客服</string>
    <string name="forget_bt1">获取验证码</string>
    <string name="registere_ed1">请输入手机号码或邮箱</string>
    <string name="agreement_tv1">关闭</string>
    <string name="lion_yo_android_android_linearlayout_android_linearlayout_orientation_vertical_imageview_android_color_0_layout_weight_1_1_1_1_relativelayout_true_id_relativelayout_id_margin_padding_margin_android_layout_margin_android_layout_marginleft_android_layout_margintop_android_layout_marginright_android_layout_marginbottom_padding_textview_margin_50dp_android_google_linearlayout_http_www_android_doc_com_reference_android_widget_linearlayout_html_app_app_app_1_2_3_connected_devices_app_4_congratulations_app_android_ios_ps_hhhh_sealynn0_demons_imagine_dragons_lion">下载腾讯新闻客户端, 女孩帮醉驾男朋友换血 图集 每个人都有一个属于自己的星空 从今晚起不熬夜 - Lion - Yo~最近也是够忙的了，但是技术干货的推文还是不能落下，Android又来啦！首先想说说Android的两个基本布局。 LinearLayout 我们来回顾上一次的推文，Android界面的是由布局和控件组成的。布局相对于一个容器，里面放着各种各样的控件（按钮、文字、图片等）。而控件在布局的位置，则是由布局提供的属性来控制的。 而上次我们就已经用到了LinearLayout，这是线性布局。在这个布局内的控件是成水平或者垂直排布的（如图，默认是水平排布）。我们需要用到一个orientation属性，将其属性值设为vertical便可。 在这里我还要讲到一个权重的属性，就是在线性布局里按照多少的比例分配大小。 创建了三个ImageView，每个的宽度设为占满布局，并将图片用过@android:color/引用安卓本身的一些颜色。然而我将高度设为0，然后用layout_weight属性给每个控件设置1的权值，那么这三个控件就会按照1:1:1属性占满屏幕。当然，我们也可以事先在布局中先定一个总值，再给控件分比例。 RelativeLayout叫相对布局，意思是里面的控件都可以在控件内找到一个相对的位置。具体可以通过以下属性： 根据父容器来定位: 想位于哪,哪个属性就设置为true 根据兄弟控件来定位（右面的属性值为兄弟控件的id） 我们先来看一下RelativeLayout： 这里演示一个比较典型的例子，梅花布局。 可以看到，我们在给一个控件一个id之后，其它控件可以通过上面提到的属性来进行一个定位，从而找到在布局中的位置。 最后还有两个比较常用的Margin和Padding属性！ Margin:设置组件与父容器(通常是布局)的边距 android:layout_margin: 指定控件的四周的外部留出一定的边距 android:layout_marginLeft: 指定控件的左边的外部留出一定的边距 android:layout_marginTop: 指定控件的上边的外部留出一定的边距 android:layout_marginRight: 指定控件的右边的外部留出一定的边距 android:layout_marginBottom: 指定控件的下边的外部留出一定的边距 Padding:设置组件内部元素间的边距(可以理解为填充) 比如说我给例子中TextView设置一个Margin属性，属性值为50dp： 当然Android的布局不只有那么两个，讲的这两个都是最基础的布局。其它的布局我们可以在Google的官方文档内找到，比如说LinearLayout的：http://www.android-doc.com/reference/android/widget/LinearLayout.html 我们可以在文档中查到各个布局，以及控件的属性，将他们组合在一起会有奇妙的事情发生噢~ 运行自己的APP 教大家写了那么久的界面，似乎连个APP的影子都没见到，那么我就在这里简单的教下大家运行APP吧，我这里主要教大家怎么用手机调试（运行），如果会创建虚拟机的话其实方法也是差不多的。 1. 将你的手机插入电脑。 2. 点击界面右上角的三角形，出现下面的界面： 3. 在上图Connected Devices中你可以看到自己的手机，点击你的手机，则会进行APP的打包安装到你的手机上并运行。 4. 最后在你的手机上出现这个界面。 Congratulations！！！你的第一个APP就运行成功啦！ 作者的话 Android的教程到这篇就暂时结束啦，因为下一篇干货是iOS的。在写推文的时候，我总是想讲更多的东西，但是一篇推文能讲述的信息还是比较少的。所以有很多想讲的东西都还没写，以后有机会再写吧。 Ps：还有这里也想问一问大家，你们希望有一个可以学习到技术的交流群吗，如果有的话那赶紧来留言区与我们反馈吧~ 我们可以在这个群里讨论技术的问题，也可以约程序员看星星看月亮聊人生什么的。程序员可以用多种编程语言画出不同形状的心形噢hhhh（逃~ - 特别鸣谢 - 内容 - SeaLynn0 封面 - 堆糖 音乐 - 《Demons》Imagine Dragons 编辑 - Lion</string>
    <string name="agreement_bt1">确定</string>





</resources>
