<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".register.LoginActivity"
    style="@style/login_1">


    <LinearLayout

    style="@style/login_2">
    <ImageView

        android:src="@drawable/ic_launcher_background"
        style="@style/login_Image" />

    <EditText
        android:id="@+id/login_ed_name"
        android:background="@null"
        android:hint="@string/login_User"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>




    <LinearLayout

        android:layout_margin="5dp"
        android:background="@color/colorBACK"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="500dp"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_launcher_background"
            style="@style/login_Image"/>
        <EditText
            android:id="@+id/login_ed_password"
            android:background="@null"
            android:hint="@string/login_User"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="600dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/login_li1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
          <ImageView
              android:src="@drawable/ic_launcher_background"
              android:layout_width="25dp"
              android:layout_height="25dp" />
            <TextView
                android:gravity="center"
                android:text="@string/login_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/login_li2"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:gravity="center"
                android:text="@string/login_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/login_li3"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:gravity="center"
                android:text="@string/login_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>




    </LinearLayout>
    <Button
        android:id="@+id/login_bt1"
        android:text="@string/login_bt1"
        android:layout_margin="10dp"
        android:layout_width="500dp"
        android:layout_height="wrap_content" />




</LinearLayout>