<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".register.ForgetpasswordActivity">

    <LinearLayout
        style="@style/login_2">
        <ImageView
            android:src="@drawable/ic_launcher_background"
            style="@style/login_Image" />

        <EditText
            android:id="@+id/forget_psw_ed1"
            android:background="@null"
            android:hint="@string/login_User"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="500dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/forget_psw_ed2"
            android:background="@color/colorBACK"
            android:layout_width="350dp"
            android:layout_height="match_parent" />

        <Button
            android:text="@string/forget_bt1"
            android:id="@+id/forget_psw_bt1"
            android:layout_width="150dp"
            android:layout_height="match_parent" />


    </LinearLayout>

    <LinearLayout
        android:layout_margin="5dp"
        style="@style/login_2">
        <ImageView
            android:src="@drawable/ic_launcher_background"
            style="@style/login_Image" />

        <EditText
            android:id="@+id/forget_psw_ed3"
            android:background="@null"
            android:hint="@string/login_User"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="5dp"
        style="@style/login_2">
        <ImageView
            android:src="@drawable/ic_launcher_background"
            style="@style/login_Image" />

        <EditText
            android:id="@+id/forget_psw_ed4"
            android:background="@null"
            android:hint="@string/login_User"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout

        android:layout_width="500dp"
        android:layout_height="50dp">

        <LinearLayout
            android:id="@+id/forget_psw_li1"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:layout_gravity="center"
                android:text="@string/froget_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forget_psw_li2"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:layout_gravity="center"
                android:text="@string/forget_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </RelativeLayout>

    <Button
        android:id="@+id/forget_psw_bt2"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />




</LinearLayout>